--- a/0.3/snippets/inputPlay.html
+++ b/0.3/snippets/inputPlay.html
@@ -121,7 +121,6 @@
 		<p>You can play around with input.js right here. All you need to do is change the script and then click the activate button.</p>
 	
 
-
 			</div>
 		</div>
 
@@ -141,13 +140,13 @@
 		</div>
 
    		<div id="editor">
-define(['pipAPI'], function(APIconstructor) {
+define([&#39;pipAPI&#39;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
 	// ### input
 	// The trial input attribute lists the input types that the player is familiar with.
-	// Each input element must include both a handle and an on propery. </br>
+	// Each input element must include both a handle and an on propery. &lt;/br&gt;
 	// The **handle** is the way we refer to this type of input inside the player (in the interaction section), it is basicly the name we give this input.
 	// The **on** parameter describes the specific input that triggers this element.
 
@@ -157,19 +156,19 @@ define(['pipAPI'], function(APIconstructor) {
 		{
 			input: [
 				// Key can take single characters.
-				{handle:'end',on:'keypressed', key:'i'},
+				{handle:&#39;end&#39;,on:&#39;keypressed&#39;, key:&#39;i&#39;},
 				// Or key codes (69 is the key code for e).
-				{handle:'end',on:'keypressed', key:69},
+				{handle:&#39;end&#39;,on:&#39;keypressed&#39;, key:69},
 				// And even arrays
-				{handle:'otherHandle',on:'keypressed', key:['i',69]}
+				{handle:&#39;otherHandle&#39;,on:&#39;keypressed&#39;, key:[&#39;i&#39;,69]}
 			],
-			layout: [{media :{word:'Click e or i to move on'}}],
+			layout: [{media :{word:&#39;Click e or i to move on&#39;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		},
@@ -177,19 +176,19 @@ define(['pipAPI'], function(APIconstructor) {
 		{
 			input: [
 				// Space
-				{handle:'end',on:'space'},
+				{handle:&#39;end&#39;,on:&#39;space&#39;},
 				// Enter
-				{handle:'end',on:'enter'},
+				{handle:&#39;end&#39;,on:&#39;enter&#39;},
 				// Escape
-				{handle:'end',on:'esc'}
+				{handle:&#39;end&#39;,on:&#39;esc&#39;}
 			],
-			layout: [{media :{word:'Click enter escape or space to move on'}}],
+			layout: [{media :{word:&#39;Click enter escape or space to move on&#39;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		},
@@ -200,38 +199,38 @@ define(['pipAPI'], function(APIconstructor) {
 		// In case an element is defined it is presented when the input is activated.
 		{
 			input: [
-				// **stimHandle** is used to indicate stimuli with the appropriate Handle (in this case "myStimulus").
-				{handle:'end',on:'click',stimHandle:'myStimulus'},
+				// **stimHandle** is used to indicate stimuli with the appropriate Handle (in this case &quot;myStimulus&quot;).
+				{handle:&#39;end&#39;,on:&#39;click&#39;,stimHandle:&#39;myStimulus&#39;},
 				// **element** allows you to insert an html (or even jquery) element for this interaction
-				{handle:'end',on:'click',element:'<div>bump</div>'}
+				{handle:&#39;end&#39;,on:&#39;click&#39;,element:&#39;&lt;div&gt;bump&lt;/div&gt;&#39;}
 			],
-			layout: [{data:{handle:'myStimulus'},media :{word:'Click me too!!'}}],
+			layout: [{data:{handle:&#39;myStimulus&#39;},media :{word:&#39;Click me too!!&#39;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		},
 
 		// ##### Timeout
 		// React after a set time.
-		// Takes a duration property in miliseconds. </br>
+		// Takes a duration property in miliseconds. &lt;/br&gt;
 		// This input is especialy usefell together with the removeInput action. (see the actions tutorial)
 		{
 			input: [
 				// This trial will end after five seconds.
-				{handle:'end', on: 'timeout', duration: 3000}
+				{handle:&#39;end&#39;, on: &#39;timeout&#39;, duration: 3000}
 			],
-			layout: [{media :{word:'Wait just five seconds'}}],
+			layout: [{media :{word:&#39;Wait just five seconds&#39;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		}
@@ -261,7 +260,8 @@ define(['pipAPI'], function(APIconstructor) {
 		    		win = null;
 		    	}
 
-		    	win = window.open('../static/playquest.html', 'questionnaire');
+		    	win = window.open('../static/playpip.html', 'pip');
+		    	win.focus();
 
 		    	win.onload = function(){
 		    		// first set the unload listener
