--- a/0.3/snippets/trialPlay.html
+++ b/0.3/snippets/trialPlay.html
@@ -121,7 +121,6 @@
 		<p>You can play around with trial.js right here. All you need to do is change the script and then click the activate button.</p>
 	
 
-
 			</div>
 		</div>
 
@@ -144,7 +143,7 @@
 // All PIP source files are wrapped inside define function
 // This function gives you access to the API object that we use to build the various tasks
 // If you want to know more about this, you can read up about AMD and check out http://requirejs.org/
-define(['pipAPI'], function(APIconstructor) {
+define([&#39;pipAPI&#39;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
@@ -160,15 +159,15 @@ define(['pipAPI'], function(APIconstructor) {
 			// It can be used to keep track of trial types, blocks, score etc.
 			// It becomes incrementaly usefull with more advance features of the PIP.
 			data: {
-				myProperty: 'information',
-				myOtherProperty: 'more information'
+				myProperty: &#39;information&#39;,
+				myOtherProperty: &#39;more information&#39;
 			},
 
 			// The input property of the trial is used to create the user interface.
 			// In this case we tell the player to listen for hits on the space key.
 			// Later on we will tell the player what to do when the space button is clicked.
 			input: [
-				{handle:'space',on:'space'}
+				{handle:&#39;space&#39;,on:&#39;space&#39;}
 			],
 
 			// The layout property of the trial is used to display statick stimuli.
@@ -176,15 +175,15 @@ define(['pipAPI'], function(APIconstructor) {
 			// This property holds an array of stimuli objects, in this case the stimuli are set to display words in the top left and bottom right of the screen.
 			// We will learn more about Stimuli in a later tutorial.
 			layout:[
-				{location:{left:0,top:0},media:{word:'top left'}},
-				{location:{left:'auto',right:0,top:'auto',bottom:0},media:{word:'bottom right'}}
+				{location:{left:0,top:0},media:{word:&#39;top left&#39;}},
+				{location:{left:&#39;auto&#39;,right:0,top:&#39;auto&#39;,bottom:0},media:{word:&#39;bottom right&#39;}}
 			],
 
 			// The stimuli property of the trial holds stimuli that are dynamicaly displayed durring the trial.
 			// These trials are not displayed by default, and can be affected by user interactions.
 			// Like the layout property the stimuli property holds an array of stimuli objects.
 			stimuli: [
-				{media :{word:'Hello world'}}
+				{media :{word:&#39;Hello world&#39;}}
 			],
 
 			// The interaction property of the trial is responsible for any interactions the user has through the trial.
@@ -195,17 +194,17 @@ define(['pipAPI'], function(APIconstructor) {
 				// 1. Display Stimulus
 				{
 					/* when we begin the trial (condition) */
-					conditions: [{type:'begin'}],
+					conditions: [{type:&#39;begin&#39;}],
 					/* show all stimuli (action) */
-					actions: [{type:'showStim',handle:'All'}]
+					actions: [{type:&#39;showStim&#39;,handle:&#39;All&#39;}]
 				},
 
 				// 2. End trial on space click
 				{
 					/* when space is clicked */
-					conditions: [{type:'inputEquals',value:'space'}],
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;space&#39;}],
 					/* end the trial */
-					actions: [{type:'endTrial'}]
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		}
@@ -215,7 +214,7 @@ define(['pipAPI'], function(APIconstructor) {
 
 	return API.script;
 });
-/* don't forget to close the require wrapper */
+/* don&#39;t forget to close the require wrapper */
 		</div>
 
 		<script>
@@ -238,7 +237,8 @@ define(['pipAPI'], function(APIconstructor) {
 		    		win = null;
 		    	}
 
-		    	win = window.open('../static/playquest.html', 'questionnaire');
+		    	win = window.open('../static/playpip.html', 'pip');
+		    	win.focus();
 
 		    	win.onload = function(){
 		    		// first set the unload listener
