--- a/0.3/snippets/interactionsPlay.html
+++ b/0.3/snippets/interactionsPlay.html
@@ -121,7 +121,6 @@
 		<p>You can play around with interactions.js right here. All you need to do is change the script and then click the activate button.</p>
 	
 
-
 			</div>
 		</div>
 
@@ -143,14 +142,14 @@
    		<div id="editor">
 // ### Interactions
 // The `interactions` module of the PIP is composed of pairs of conditions and actions.
-// Each interaction object has both a conditions and an actions property. </br>
+// Each interaction object has both a conditions and an actions property. &lt;/br&gt;
 
 //        {
 //            conditions: [condition1, condition2],
 //            actions: [action1, action2]
 //        }
 
-define(['pipAPI'], function(APIconstructor) {
+define([&#39;pipAPI&#39;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
@@ -164,26 +163,26 @@ define(['pipAPI'], function(APIconstructor) {
 		// begin is a special condition that gets automaticaly fired at the begining of each trial.
 		// Use it to dispaly stimuli, and setup any time based action in your task.
 		{
-			// &nbsp;
+			// &amp;nbsp;
 			input: [
-				{handle:'end',on:'space'}
+				{handle:&#39;end&#39;,on:&#39;space&#39;}
 			],
-			stimuli: [{data:{handle:'myStim'},media :{word:'[begin]: Click space to move on'}}],
+			stimuli: [{data:{handle:&#39;myStim&#39;},media :{word:&#39;[begin]: Click space to move on&#39;}}],
 			interactions: [
 				// This first interaction displays the stimulus
 				{
 					conditions: [
 						{
 							// Set the condition type
-							type:'begin'
+							type:&#39;begin&#39;
 						}
 					],
-					actions: [{type:'showStim',handle:'myStim'}]
+					actions: [{type:&#39;showStim&#39;,handle:&#39;myStim&#39;}]
 				},
 				// The second interaction is responsible for moving on (more about this in the inputEquals section)
 				{
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		},
@@ -194,22 +193,22 @@ define(['pipAPI'], function(APIconstructor) {
 		{
 			// We set i as the right key, and e as the left key
 			input: [
-				{handle:'right',on:'keypressed', key:'i'},
-				{handle:'left',on:'keypressed', key:'e'}
+				{handle:&#39;right&#39;,on:&#39;keypressed&#39;, key:&#39;i&#39;},
+				{handle:&#39;left&#39;,on:&#39;keypressed&#39;, key:&#39;e&#39;}
 			],
-			layout: [{media :{word:'[inputEquals]: Click e to move on'}}],
+			layout: [{media :{word:&#39;[inputEquals]: Click e to move on&#39;}}],
 			interactions: [
 				{
 					conditions: [
 						{
 							// Set the condition type
-							type:'inputEquals',
-							// This action will only be activated if the input handle is 'left' </br>
+							type:&#39;inputEquals&#39;,
+							// This action will only be activated if the input handle is &#39;left&#39; &lt;/br&gt;
 							// Pro tip: You can pass an array to the `value` property instead of just a handle name
-							value:'left'
+							value:&#39;left&#39;
 						}
 					],
-					actions: [{type:'endTrial'}]
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		},
@@ -218,25 +217,25 @@ define(['pipAPI'], function(APIconstructor) {
 		// Each trial has an optional data property that holds an array of user defined values.
 		// The `inputEqualsTrial` condition compares the input handle with the contents of the `property` property of the current trials data property.
 		{
-			// We set the leftOrRight property of trial data to 'right'
-			data: {leftOrRight: 'right'},
+			// We set the leftOrRight property of trial data to &#39;right&#39;
+			data: {leftOrRight: &#39;right&#39;},
 			input: [
-				{handle:'right',on:'keypressed', key:'i'},
-				{handle:'left',on:'keypressed', key:'e'}
+				{handle:&#39;right&#39;,on:&#39;keypressed&#39;, key:&#39;i&#39;},
+				{handle:&#39;left&#39;,on:&#39;keypressed&#39;, key:&#39;e&#39;}
 			],
-			layout: [{media :{word:'[inputEqualsTrial]: Click i to move on'}}],
+			layout: [{media :{word:&#39;[inputEqualsTrial]: Click i to move on&#39;}}],
 			interactions: [
 				{
 					conditions: [
 						{
 							// Set the condition type
-							type:'inputEqualsTrial',
+							type:&#39;inputEqualsTrial&#39;,
 							// This action will only be activated if the input handle is equal to the leftOrRight property of the trial data.
-							// in this case it will only be activated if the input handle is equal to 'right'.
-							property:'leftOrRight'
+							// in this case it will only be activated if the input handle is equal to &#39;right&#39;.
+							property:&#39;leftOrRight&#39;
 						}
 					],
-					actions: [{type:'endTrial'}]
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		},
@@ -246,33 +245,33 @@ define(['pipAPI'], function(APIconstructor) {
 		// The `inputEqualsStim` condition compares the input handle with the contents of the `property` property of the current stimulus data property.
 		// Note that only stimuli in the stimuli property are checked, stimuli under layout are ignored!!
 		{
-			// &nbsp;
+			// &amp;nbsp;
 			input: [
-				{handle:'right',on:'keypressed', key:'i'},
-				{handle:'left',on:'keypressed', key:'e'}
+				{handle:&#39;right&#39;,on:&#39;keypressed&#39;, key:&#39;i&#39;},
+				{handle:&#39;left&#39;,on:&#39;keypressed&#39;, key:&#39;e&#39;}
 			],
-			stimuli: [{data:{handle:'myStim' ,leftOrRight:'left'}, media :{word:'[inputEqualsStim]: Click e to move on'}}],
+			stimuli: [{data:{handle:&#39;myStim&#39; ,leftOrRight:&#39;left&#39;}, media :{word:&#39;[inputEqualsStim]: Click e to move on&#39;}}],
 			interactions: [
 				// Just display the stimulus
 				{
-					conditions: [{type:'begin'}],
-					actions: [{type:'showStim',handle:'myStim'}]
+					conditions: [{type:&#39;begin&#39;}],
+					actions: [{type:&#39;showStim&#39;,handle:&#39;myStim&#39;}]
 				},
 				// End trial when the correct key is pressed
 				{
 					conditions: [
 						{
 							// Set the condition type
-							type:'inputEqualsStim',
+							type:&#39;inputEqualsStim&#39;,
 							// This action will only be activated if the input handle is equal to the leftOrRight property of the stimulus data.
-							// In this case it will only be activated if the input handle is equal to 'right'.
-							property:'leftOrRight',
-							// The handle tells the player to search for the triggering property only in stimuli with the 'myStim' handle.
+							// In this case it will only be activated if the input handle is equal to &#39;right&#39;.
+							property:&#39;leftOrRight&#39;,
+							// The handle tells the player to search for the triggering property only in stimuli with the &#39;myStim&#39; handle.
 							// (You can ommit the handle property and the condition activates if any of the stimuli fit the inputEqualsStim criteria)
-							handle:'myStim'
+							handle:&#39;myStim&#39;
 						}
 					],
-					actions: [{type:'endTrial'}]
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		},
@@ -280,31 +279,31 @@ define(['pipAPI'], function(APIconstructor) {
 		// ##### Negate
 		// Sometimes we want a condition to be true only if a certain condition does NOT happen.
 		// In these cases we can use the negate property to reverse a condition.
-		// (when using negate you should be carefull that the condition doesn't turn out true in unexpected situations, for instance - on the begin input, or when triggering various timeouts)
+		// (when using negate you should be carefull that the condition doesn&#39;t turn out true in unexpected situations, for instance - on the begin input, or when triggering various timeouts)
 		{
-			data: {leftOrRight: 'right'},
+			data: {leftOrRight: &#39;right&#39;},
 			input: [
-				{handle:'right',on:'keypressed', key:'i'},
-				{handle:'left',on:'keypressed', key:'e'}
+				{handle:&#39;right&#39;,on:&#39;keypressed&#39;, key:&#39;i&#39;},
+				{handle:&#39;left&#39;,on:&#39;keypressed&#39;, key:&#39;e&#39;}
 			],
-			layout: [{media :{word:'[inputEqualsTrial+negate]: Click e to move on'}}],
+			layout: [{media :{word:&#39;[inputEqualsTrial+negate]: Click e to move on&#39;}}],
 			interactions: [
 				{
 					conditions: [
 						// If input does not equal to the leftOrRight property
 						{
-							type:'inputEqualsTrial',
-							property:'leftOrRight',
+							type:&#39;inputEqualsTrial&#39;,
+							property:&#39;leftOrRight&#39;,
 							negate: true
 						},
 						// And does not equal to the begin either.
-						// (Without this part of the condition the endTrial action would be fired upon the begin of the trial - which isn't a right keypress)
+						// (Without this part of the condition the endTrial action would be fired upon the begin of the trial - which isn&#39;t a right keypress)
 						{
-							type:'begin',
+							type:&#39;begin&#39;,
 							negate:true
 						}
 					],
-					actions: [{type:'endTrial'}]
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		}
@@ -321,46 +320,46 @@ define(['pipAPI'], function(APIconstructor) {
 			/* This trial marker is used in the goto trial later*/
 			data: {actionStart:true},
 			input: [
-				{handle:'show',on:'enter'},
-				{handle:'hide',on:'space'},
-				{handle:'end',on:'esc'}
+				{handle:&#39;show&#39;,on:&#39;enter&#39;},
+				{handle:&#39;hide&#39;,on:&#39;space&#39;},
+				{handle:&#39;end&#39;,on:&#39;esc&#39;}
 			],
-			layout: [{location:{top:0}, media :{word:'[showStim, hideStim, endTrial]: Click escape to move on, enter to show stimulus, space to hide it'}}],
-			stimuli: [{data:{handle:'myStim', displayed:false},media :{word:'MyStim'}}],
+			layout: [{location:{top:0}, media :{word:&#39;[showStim, hideStim, endTrial]: Click escape to move on, enter to show stimulus, space to hide it&#39;}}],
+			stimuli: [{data:{handle:&#39;myStim&#39;, displayed:false},media :{word:&#39;MyStim&#39;}}],
 			interactions: [
 				// *Display the stimulus*
 				{
-					conditions: [{type:'inputEquals', value:'show'}],
+					conditions: [{type:&#39;inputEquals&#39;, value:&#39;show&#39;}],
 					actions: [
-						// `type:'showStim'` displays a stimulus. `handle` defines which stimuli should be affected
+						// `type:&#39;showStim&#39;` displays a stimulus. `handle` defines which stimuli should be affected
 						{
-							type:'showStim',
-							handle:'myStim'
+							type:&#39;showStim&#39;,
+							handle:&#39;myStim&#39;
 						},
-						// `typ:'setStimAttr'` logs data into the stimulus data object. </br>
-						// `handle` defines which stimuli should be affected. </br>
-						// `setter` is an object to merge with the current stimulus data, overinging any clashing properties.</br>
-						// In this case `type:'setStimAttr'` marks displayed as true.
+						// `typ:&#39;setStimAttr&#39;` logs data into the stimulus data object. &lt;/br&gt;
+						// `handle` defines which stimuli should be affected. &lt;/br&gt;
+						// `setter` is an object to merge with the current stimulus data, overinging any clashing properties.&lt;/br&gt;
+						// In this case `type:&#39;setStimAttr&#39;` marks displayed as true.
 						{
-							type:'setStimAttr',
-							handle:'myStim',
+							type:&#39;setStimAttr&#39;,
+							handle:&#39;myStim&#39;,
 							setter:{displayed:true}
 						}
 					]
 				},
 				// *Hide the stimulus*
 				{
-					conditions: [{type:'inputEquals', value:'hide'}],
+					conditions: [{type:&#39;inputEquals&#39;, value:&#39;hide&#39;}],
 					actions: [
-						// `type:'hideStim'` displays a stimulus. `handle` defines which stimuli should be affected
+						// `type:&#39;hideStim&#39;` displays a stimulus. `handle` defines which stimuli should be affected
 						{
-							type:'hideStim',
-							handle:'myStim'
+							type:&#39;hideStim&#39;,
+							handle:&#39;myStim&#39;
 						},
-						// In this case `type:'setStimAttr'` marks displayed as false.
+						// In this case `type:&#39;setStimAttr&#39;` marks displayed as false.
 						{
-							type:'setStimAttr',
-							handle:'myStim',
+							type:&#39;setStimAttr&#39;,
+							handle:&#39;myStim&#39;,
 							setter:{displayed:false}
 						}
 
@@ -368,11 +367,11 @@ define(['pipAPI'], function(APIconstructor) {
 				},
 				// *End the trial*
 				{
-					conditions: [{type:'inputEquals', value:'end'}],
+					conditions: [{type:&#39;inputEquals&#39;, value:&#39;end&#39;}],
 					actions: [
-						// `type:'endTrial'` ends a trial and moves us on.
+						// `type:&#39;endTrial&#39;` ends a trial and moves us on.
 						{
-							type:'endTrial'
+							type:&#39;endTrial&#39;
 						}
 					]
 				}
@@ -380,60 +379,60 @@ define(['pipAPI'], function(APIconstructor) {
 		},
 
 		// ##### Trial Actions
-		// This trial ends when space is clicked or 5 seconds have passed. </br>
-		// You should note in particular the `type:'log'` action that is the way we tell the player to save the interaction and later send it to the server.
+		// This trial ends when space is clicked or 5 seconds have passed. &lt;/br&gt;
+		// You should note in particular the `type:&#39;log&#39;` action that is the way we tell the player to save the interaction and later send it to the server.
 		{
 
 			input: [
-				{handle:'end',on:'space'}
+				{handle:&#39;end&#39;,on:&#39;space&#39;}
 			],
-			layout: [{media :{word:'[Trial actions]: Click space to move on or wait 5 seconds'}}],
+			layout: [{media :{word:&#39;[Trial actions]: Click space to move on or wait 5 seconds&#39;}}],
 			interactions: [
-				// *Activate timeout at the begining* </br>
+				// *Activate timeout at the begining* &lt;/br&gt;
 				{
-					conditions: [{type:'begin'}],
+					conditions: [{type:&#39;begin&#39;}],
 					actions: [
-						// `type:'setInput'` creates a new input for this trial. `input` is a regular input object.
+						// `type:&#39;setInput&#39;` creates a new input for this trial. `input` is a regular input object.
 						{
-							type:'setInput',
-							input:{handle:'time',on:'timeout',duration:5000}
+							type:&#39;setInput&#39;,
+							input:{handle:&#39;time&#39;,on:&#39;timeout&#39;,duration:5000}
 						}
 					]
 				},
 				// *End trial on timeout*
 				{
-					conditions: [{type:'inputEquals', value:'time'}],
+					conditions: [{type:&#39;inputEquals&#39;, value:&#39;time&#39;}],
 					actions: [
 						{
-							type:'endTrial'
+							type:&#39;endTrial&#39;
 						},
-						// The `type:'log'` action tells the player to log this interaction.
+						// The `type:&#39;log&#39;` action tells the player to log this interaction.
 						{
-							type:'log'
+							type:&#39;log&#39;
 						}
 					]
 				},
-				// *End trial on click*</br>
+				// *End trial on click*&lt;/br&gt;
 				// On space click, remove listerner for the timeout, mark this trial as manualy terminated, log it and end trial.
 				{
-					conditions: [{type:'inputEquals',value:'end'}],
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
 					actions: [
-						// `type:'removeInput'` removes all inputs that have the `handle` handles.
+						// `type:&#39;removeInput&#39;` removes all inputs that have the `handle` handles.
 						{
-							type:'removeInput',
-							handle	:'time'
+							type:&#39;removeInput&#39;,
+							handle	:&#39;time&#39;
 						},
-						// `type: 'setTrialAttr'` merges the values from `setter` into the trial data.
+						// `type: &#39;setTrialAttr&#39;` merges the values from `setter` into the trial data.
 						// (setter may also take a function, see documentation)
 						{
-							type: 'setTrialAttr',
+							type: &#39;setTrialAttr&#39;,
 							setter: {terminatedManual:true}
 						},
 						{
-							type:'log'
+							type:&#39;log&#39;
 						},
 						{
-							type:'endTrial'
+							type:&#39;endTrial&#39;
 						}
 					]
 				}
@@ -441,37 +440,37 @@ define(['pipAPI'], function(APIconstructor) {
 		},
 
 		// ##### goto
-		// The `type:'goto'` action is responsible for the next trial we move on to. It is special in that it executes only after the trial ends, so you will usualy want to follow it with an endTrial action.
+		// The `type:&#39;goto&#39;` action is responsible for the next trial we move on to. It is special in that it executes only after the trial ends, so you will usualy want to follow it with an endTrial action.
 		// There are many types of goto destinations, refer to the documentation for a full list.
 		{
 
 			input: [
-				{handle:'restart',on:'space'},
-				{handle:'end',on:'esc'}
+				{handle:&#39;restart&#39;,on:&#39;space&#39;},
+				{handle:&#39;end&#39;,on:&#39;esc&#39;}
 			],
-			layout: [{media :{word:'[goto]: Click space to restart actions, escape to end task'}}],
+			layout: [{media :{word:&#39;[goto]: Click space to restart actions, escape to end task&#39;}}],
 			interactions: [
 				{
-					conditions: [{type:'inputEquals',value:'restart'}],
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;restart&#39;}],
 					actions: [
-						// `destination` defines what type of goto this is, in this case go to the last trial that has all the properties in `properties`. </br>
-						// `properties` is an object to compare to the trial data. note that the properties will only compare to properties present in the raw sequence (before inheritance)! </br>
+						// `destination` defines what type of goto this is, in this case go to the last trial that has all the properties in `properties`. &lt;/br&gt;
+						// `properties` is an object to compare to the trial data. note that the properties will only compare to properties present in the raw sequence (before inheritance)! &lt;/br&gt;
 						// In this case `previousWhere` finds the first action trial which is marked by the data object {actionStart : true}
 						{
-							type:'goto',
-							destination:'previousWhere',
+							type:&#39;goto&#39;,
+							destination:&#39;previousWhere&#39;,
 							properties: {actionStart:true}
 						},
 						{
-							type:'endTrial'
+							type:&#39;endTrial&#39;
 						}
 					]
 				},
 				{
-					conditions: [{type:'inputEquals',value:'end'}],
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
 					actions: [
 						{
-							type:'endTrial'
+							type:&#39;endTrial&#39;
 						}
 					]
 				}
@@ -503,7 +502,8 @@ define(['pipAPI'], function(APIconstructor) {
 		    		win = null;
 		    	}
 
-		    	win = window.open('../static/playquest.html', 'questionnaire');
+		    	win = window.open('../static/playpip.html', 'pip');
+		    	win.focus();
 
 		    	win.onload = function(){
 		    		// first set the unload listener
