--- a/0.3/snippets/settingsPlay.html
+++ b/0.3/snippets/settingsPlay.html
@@ -121,7 +121,6 @@
 		<p>You can play around with settings.js right here. All you need to do is change the script and then click the activate button.</p>
 	
 
-
 			</div>
 		</div>
 
@@ -142,15 +141,15 @@
 
    		<div id="editor">
 // # Settings
-// This tutorial will show you how to use the API in order to set the global settings for the PIP. </br>
+// This tutorial will show you how to use the API in order to set the global settings for the PIP. &lt;/br&gt;
 // The `API.addSettings()` function takes two arguments; the first is the property we want to affect (i.e. canvas), and the second is the settings object we want to set in it.
-// Adding setting is accumulative. this means that adding a specific setting twice merges it in, and does not reset it to its defaults. </br>
+// Adding setting is accumulative. this means that adding a specific setting twice merges it in, and does not reset it to its defaults. &lt;/br&gt;
 // The basic structure of the add settings object is as follows:
 
-//			API.addSettings('settingName',{
+//			API.addSettings(&#39;settingName&#39;,{
 //				// some settings
 //			});
-define(['pipAPI'], function(APIconstructor) {
+define([&#39;pipAPI&#39;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
@@ -159,7 +158,7 @@ define(['pipAPI'], function(APIconstructor) {
 	// The canvas setting controls the general look that the player takes
 	/* canvas */
 	// ##### controling shape
-	API.addSettings('canvas',{
+	API.addSettings(&#39;canvas&#39;,{
 
 		// `maxWidth` the maximum width (in pixels) that the canvas may reach. By default it is set to 500px.
 		maxWidth: 800,
@@ -169,27 +168,27 @@ define(['pipAPI'], function(APIconstructor) {
 		// ##### controling design
 		,
 		// `background` controls the background color of the whole screen
-		background: 'violet',
+		background: &#39;violet&#39;,
 		// `canvasBackground` controls the background color of the player canvas
-		canvasBackground: 'lightblue',
+		canvasBackground: &#39;lightblue&#39;,
 		// `borderWidth` controls the width of the player canvas borders in pixels
 		borderWidth: 4,
 		// `borderColor` controls the color of the player canvas borders
-		borderColor: 'black',
+		borderColor: &#39;black&#39;,
 		// `css` allows you to add your custom css to the canvas element (using the jQuery css API).
 		// This is an advanced way to affect the way your task looks globaly.
 		css: {
-			color:'tomato'
+			color:&#39;tomato&#39;
 		}
 	});
 
 	// ### Logger
-	// The logger section is responsible for logging options. </br>
+	// The logger section is responsible for logging options. &lt;/br&gt;
 	// See documentation if you want to add a custom logger function to replace the default logging action of the player.
 	/* Logger */
 	// `url` is the url to which we send the logged data (ask your IT team what it should be). You should set this if you want to log your data...
-	API.addSettings('logger',{
-		url: 'my.domain.org/controler.php',
+	API.addSettings(&#39;logger&#39;,{
+		url: &#39;my.domain.org/controler.php&#39;,
 		// `pulse` the maximum size of each data pulse to the server (see documentation for more details).
 		// In this case we post to the server every 20 logs.
 		pulse: 20,
@@ -198,16 +197,16 @@ define(['pipAPI'], function(APIconstructor) {
 	});
 
 	// ### Base url
-	// The base url section is responsible for loading images and templates. it allows the user to pick a base url from which to load all images and templates. </br>
+	// The base url section is responsible for loading images and templates. it allows the user to pick a base url from which to load all images and templates. &lt;/br&gt;
 	/* base url */
 	// You can input a single url for use for both images and template.
-	API.addSettings('base_url','media');
+	API.addSettings(&#39;base_url&#39;,&#39;media&#39;);
 	// Or an object with seperate paths for templates and images.
-	API.addSettings('base_url',{
+	API.addSettings(&#39;base_url&#39;,{
 		// `image`: the path to your images
-		image: 'media/images',
+		image: &#39;media/images&#39;,
 		// `template`: the path to your templates
-		template: 'media/templates'
+		template: &#39;media/templates&#39;
 	});
 
 	// ### Redirect
@@ -215,27 +214,27 @@ define(['pipAPI'], function(APIconstructor) {
 	// The redirect setting decides where to redirect the player at the end of the task.
 	// By default, the player simply refreshes the current page.
 	// This option is not used if the endTask hook is set.
-	API.addSettings('redirect','my.domain.org/next/');
+	API.addSettings(&#39;redirect&#39;,&#39;my.domain.org/next/&#39;);
 
 	// ### Meta data
 	/* Meta data */
 	// Meta data is server side data that should be returned with every request to the server.
 	// Any key value pair in the meta data is added to every post the player makes to the server.
 	// In order to create a post with three keys: json, session_id and task_id - you would write something like this:
-	API.addSettings('metaData', {
+	API.addSettings(&#39;metaData&#39;, {
 		session_id	: 9872356,
-		task_id		: '43BTW78'
+		task_id		: &#39;43BTW78&#39;
 	});
 
 	// ### sequence
 	API.addSequence([
 		{
-			input: [{handle:'end', on:'space'}],
-			layout:[{media:{word:'Just a plain trial to show what we can do with settings'}}],
+			input: [{handle:&#39;end&#39;, on:&#39;space&#39;}],
+			layout:[{media:{word:&#39;Just a plain trial to show what we can do with settings&#39;}}],
 			interactions: [
 				{
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&#39;inputEquals&#39;,value:&#39;end&#39;}],
+					actions: [{type:&#39;endTrial&#39;}]
 				}
 			]
 		}
@@ -265,7 +264,8 @@ define(['pipAPI'], function(APIconstructor) {
 		    		win = null;
 		    	}
 
-		    	win = window.open('../static/playquest.html', 'questionnaire');
+		    	win = window.open('../static/playpip.html', 'pip');
+		    	win.focus();
 
 		    	win.onload = function(){
 		    		// first set the unload listener
