--- a/0.3/tutorials/playgroundPlay.html
+++ b/0.3/tutorials/playgroundPlay.html
@@ -121,7 +121,6 @@
 		<p>You can play around in the playground right here. All you need to do is change the script and then click the activate button.</p>
 	
 
-
 			</div>
 		</div>
 
@@ -141,28 +140,28 @@
 		</div>
 
    		<div id="editor">
-define(['pipAPI'], function(APIconstructor) {
+define([&#39;pipAPI&#39;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
 	API.addSequence([
 		{
 			input: [
-				{handle:'space',on:'space'}
+				{handle:&#39;space&#39;,on:&#39;space&#39;}
 			],
 			layout: [
 				{
-					media :{word:'Hello world'},
-					css:{fontSize:'2em',color:'#D7685A'}
+					media :{word:&#39;Hello world&#39;},
+					css:{fontSize:&#39;2em&#39;,color:&#39;#D7685A&#39;}
 				}
 			],
 			interactions: [
 				{
 					conditions: [
-						{type:'inputEquals',value:'space'}
+						{type:&#39;inputEquals&#39;,value:&#39;space&#39;}
 					],
 					actions: [
-						{type:'endTrial'}
+						{type:&#39;endTrial&#39;}
 					]
 				}
 			]
@@ -193,7 +192,8 @@ define(['pipAPI'], function(APIconstructor) {
 		    		win = null;
 		    	}
 
-		    	win = window.open('../static/playquest.html', 'questionnaire');
+		    	win = window.open('../static/playpip.html', 'pip');
+		    	win.focus();
 
 		    	win.onload = function(){
 		    		// first set the unload listener
