--- a/0.3/tutorials/slideshow1Play.html
+++ b/0.3/tutorials/slideshow1Play.html
@@ -121,7 +121,6 @@
 		<p>You can play around with slideshow1.js right here. All you need to do is change the script and then click the activate button.</p>
 	
 
-
 			</div>
 		</div>
 
@@ -142,34 +141,34 @@
 
    		<div id="editor">
 /* The script wrapper */
-define(['pipAPI'], function(APIconstructor) {
+define([&#39;pipAPI&#39;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
 
 	API.addSequence([
 		{
-			input: [{handle:'space',on:'space'}],
-			layout: [{media :{word:'Is\'nt'}}],
+			input: [{handle:&#39;space&#39;,on:&#39;space&#39;}],
+			layout: [{media :{word:&#39;Is\&#39;nt&#39;}}],
 			interactions: [{
-				conditions: [{type:'inputEquals',value:'space'}],
-				actions: [{type:'endTrial'}]
+				conditions: [{type:&#39;inputEquals&#39;,value:&#39;space&#39;}],
+				actions: [{type:&#39;endTrial&#39;}]
 			}]
 		},
 		{
-			input: [{handle:'space',on:'space'}],
-			layout: [{media :{word:'this'}}],
+			input: [{handle:&#39;space&#39;,on:&#39;space&#39;}],
+			layout: [{media :{word:&#39;this&#39;}}],
 			interactions: [{
-				conditions: [{type:'inputEquals',value:'space'}],
-				actions: [{type:'endTrial'}]
+				conditions: [{type:&#39;inputEquals&#39;,value:&#39;space&#39;}],
+				actions: [{type:&#39;endTrial&#39;}]
 			}]
 		},
 		{
-			input: [{handle:'space',on:'space'}],
-			layout: [{media :{word:'cool?'}}],
+			input: [{handle:&#39;space&#39;,on:&#39;space&#39;}],
+			layout: [{media :{word:&#39;cool?&#39;}}],
 			interactions: [{
-				conditions: [{type:'inputEquals',value:'space'}],
-				actions: [{type:'endTrial'}]
+				conditions: [{type:&#39;inputEquals&#39;,value:&#39;space&#39;}],
+				actions: [{type:&#39;endTrial&#39;}]
 			}]
 		}
 	]);
@@ -199,7 +198,8 @@ define(['pipAPI'], function(APIconstructor) {
 		    		win = null;
 		    	}
 
-		    	win = window.open('../static/playquest.html', 'questionnaire');
+		    	win = window.open('../static/playpip.html', 'pip');
+		    	win.focus();
 
 		    	win.onload = function(){
 		    		// first set the unload listener
