--- a/0.3/tutorials/slideshow3Play.html
+++ b/0.3/tutorials/slideshow3Play.html
@@ -121,7 +121,6 @@
 		<p>You can play around with slideshow3.js right here. All you need to do is change the script and then click the activate button.</p>
 	
 
-
 			</div>
 		</div>
 
@@ -142,48 +141,48 @@
 
    		<div id="editor">
 /* The script wrapper */
-define(['pipAPI'], function(APIconstructor) {
+define([&#39;pipAPI&#39;], function(APIconstructor) {
 
-	var API = new APIconstructor('slideshow');
+	var API = new APIconstructor(&#39;slideshow&#39;);
 
 
-	// Create a trial set with the "Hello world" trial.
-	API.addTrialSets('slide',[{
-		input: [{handle:'space',on:'space'}],
-		layout: [{media :{word:'Hello world'}}],
+	// Create a trial set with the &quot;Hello world&quot; trial.
+	API.addTrialSets(&#39;slide&#39;,[{
+		input: [{handle:&#39;space&#39;,on:&#39;space&#39;}],
+		layout: [{media :{word:&#39;Hello world&#39;}}],
 		interactions: [{
-			conditions: [{type:'inputEquals',value:'space'}],
-			actions: [{type:'endTrial'}]
+			conditions: [{type:&#39;inputEquals&#39;,value:&#39;space&#39;}],
+			actions: [{type:&#39;endTrial&#39;}]
 		}]
 	}]);
 
 	// Create a stimulus set with the default style for all trials.
-	API.addStimulusSets('default',[
-		{css:{fontSize:'2em',color:'#D7685A'}}
+	API.addStimulusSets(&#39;default&#39;,[
+		{css:{fontSize:&#39;2em&#39;,color:&#39;#D7685A&#39;}}
 	]);
 
 	// Create the sequence.
 	API.addSequence([
 		// Trials know to inherit from trial sets.
 		{
-			inherit:'slide',
+			inherit:&#39;slide&#39;,
 			// Stimuli know to inherit from stimulus sets.
 			layout: [{
-				inherit:'default',
-				media :{word:'This'}
+				inherit:&#39;default&#39;,
+				media :{word:&#39;This&#39;}
 			}]
 		},
 		{
-			inherit:'slide',
-			layout: [{inherit:'default',media :{word:'is'}}]
+			inherit:&#39;slide&#39;,
+			layout: [{inherit:&#39;default&#39;,media :{word:&#39;is&#39;}}]
 		},
 		{
-			inherit:'slide',
-			layout: [{inherit:'default',media :{word:'even'}}]
+			inherit:&#39;slide&#39;,
+			layout: [{inherit:&#39;default&#39;,media :{word:&#39;even&#39;}}]
 		},
 		{
-			inherit:'slide',
-			layout: [{inherit:'default',media :{word:'Cooler!'}}]
+			inherit:&#39;slide&#39;,
+			layout: [{inherit:&#39;default&#39;,media :{word:&#39;Cooler!&#39;}}]
 		}
 	]);
 
@@ -212,7 +211,8 @@ define(['pipAPI'], function(APIconstructor) {
 		    		win = null;
 		    	}
 
-		    	win = window.open('../static/playquest.html', 'questionnaire');
+		    	win = window.open('../static/playpip.html', 'pip');
+		    	win.focus();
 
 		    	win.onload = function(){
 		    		// first set the unload listener
